# VulkanRendering

./: .gitignore  CMakeLists.txt
scripts/: compile-shaders.sh  ensure-dependencies.sh
shaders/: shader.frag  shader.vert  vert.spv
src/: GameApplication.cpp  GameApplication.h  Macros.h  main.cpp
